- fixed spacing issues on About page - Added default styling to <p> tags and removed inline styling - Fixed markup in alert list on results page - Fixed input text area starting with lots of spaces input

--- a/static/main.css
+++ b/static/main.css
@@ -1,3 +1,8 @@
+p {
+    line-height: 2;
+    max-width: 88ex; /* measure-6 */
+}
+
 .left-margin {
     margin-left: 0;
     float: left;
